--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,90 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+li {
+  list-style-type: none;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto;
+  grid-template-areas: "sidebar header" "sidebar main";
+}
+
+.sidebar {
+  grid-area: sidebar;
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+/* header start */
+.header {
+  padding: 1rem;
+  grid-area: header;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "header-search header-user-setting" "header-user-greeting header-shortcuts";
+}
+
+.user-settings {
+  grid-area: header-user-setting;
+}
+
+.user-greeting {
+  grid-area: header-user-greeting;
+}
+
+.shortcuts {
+  grid-area: header-shortcuts;
+}
+
+.search {
+  grid-area: header-search;
+}
+
+/* main start */
+.main-content {
+  padding: 1rem;
+  grid-area: main;
+
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "project-list announcements" "project-list trending";
+}
+
+.project-list {
+  grid-area: project-list;
+}
+
+.project-list ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.announcements {
+  grid-area: announcements;
+}
+
+.announcements ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.trending {
+  grid-area: trending;
+}
+
+.announcements ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+}
