--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,28 @@
   padding: 0;
 }
 
+:root {
+  --primary-color: #4590ce;
+  --secondary-color: #e3e8ef;
+  --card-color: #e7b64a;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
 
 li {
   list-style-type: none;
 }
 
+li:not(.sidebar ul li) {
+  background-color: white;
+}
+
 .container {
+  height: inherit;
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: auto;
@@ -25,6 +38,9 @@ li {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  background-color: var(--primary-color);
+  color: white;
 }
 
 /* header start */
@@ -49,19 +65,30 @@ li {
   grid-area: header-shortcuts;
 }
 
+.shortcuts button {
+  color: white;
+  background-color: var(--primary-color);
+}
+
 .search {
   grid-area: header-search;
+}
+
+.search input {
+  background-color: var(--secondary-color);
 }
 
 /* main start */
 .main-content {
   padding: 1rem;
   grid-area: main;
+  background-color: var(--secondary-color);
 
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "project-list announcements" "project-list trending";
+  gap: 1rem;
 }
 
 .project-list {
@@ -72,6 +99,7 @@ li {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
+  gap: 1rem;
 }
 
 .announcements {
@@ -88,7 +116,7 @@ li {
   grid-area: trending;
 }
 
-.announcements ul {
+.trending ul {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, 1fr);
