--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,10 @@ li:not(.sidebar ul li) {
 /* header start */
 .header {
   background-color: white;
-  padding: 1rem;
+  padding: 1.5rem;
   grid-area: header;
   display: grid;
+  gap: 2rem;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: "header-search header-user-setting" "header-user-greeting header-shortcuts";
@@ -61,14 +62,41 @@ li:not(.sidebar ul li) {
 
 .user-settings {
   grid-area: header-user-setting;
+  display: flex;
+  gap: 1rem;
+}
+
+.user-settings span {
+  font-weight: 700;
 }
 
 .user-greeting {
   grid-area: header-user-greeting;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.user-greeting div {
+  font-size: 0.75rem;
+  font-weight: 600;
 }
 
 .shortcuts {
   grid-area: header-shortcuts;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
+  gap: 1rem;
+}
+
+.shortcuts button {
+  padding: 0.5rem 1rem;
+  border-radius: 1.25rem;
+  border: none;
+
+  font-weight: 600;
 }
 
 .shortcuts button {
@@ -78,10 +106,17 @@ li:not(.sidebar ul li) {
 
 .search {
   grid-area: header-search;
+  display: flex;
+
+  gap: 1rem;
 }
 
 .search input {
   background-color: var(--secondary-color);
+  border: none;
+  height: 1.5rem;
+  border-radius: 1rem;
+  flex: 1;
 }
 
 /* main start */
