--- a/styles.css
+++ b/styles.css
@@ -35,16 +35,37 @@ li:not(.sidebar ul li) {
   grid-template-areas: "sidebar header" "sidebar main";
 }
 
+.logo {
+  display: grid;
+  gap: 0.5rem;
+
+  grid-template-columns: 1fr 2fr;
+}
+
 .sidebar {
   grid-area: sidebar;
   padding: 1rem;
 
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2.5rem;
 
   background-color: var(--primary-color);
   color: white;
+}
+
+.sidebar > ul {
+  display: flex;
+  gap: 1.5rem;
+  flex-direction: column;
+  font-weight: 600;
+}
+
+.sidebar > ul > li {
+  display: grid;
+  gap: 0.5rem;
+
+  grid-template-columns: 1fr 2fr;
 }
 
 /* header start */
